[gd_scene load_steps=4 format=3 uid="uid://c4dq37sw1guew"]

[ext_resource type="Script" path="res://views/item/item_script/itm_fruit.gd" id="1_pgarg"]
[ext_resource type="Texture2D" uid="uid://b1cg2qmf0ka6r" path="res://views/item/itm_lemon.png" id="2_2hsqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdkpd"]
size = Vector2(52, 52)

[node name="ItmLemon" type="Node2D"]
position = Vector2(122, 72)
script = ExtResource("1_pgarg")

[node name="SpriteLemon" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_2hsqh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_qdkpd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
